# Meta_3_1

./: Dockerfile  PRESENTATION_SCRIPT.md  README.md  SCORING_ANALYSIS.md  SLIDE_DECK_CONTENT.md  SUBMISSION_READY.md  VALIDATION_CHECKLIST.md  app.py  blog.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_training_space.sh  train_grpo.py
Training Script/: GRPO_training.ipynb
demo/: PR_Review_GRPO_Kaggle.ipynb
fixtures/: pr_easy.json  pr_hard.json  pr_medium.json
kaggle/: PR_Review_GRPO_Kaggle.ipynb
pr_review_env/: env.py  models.py  reward.py
pr_review_env/tasks/: __init__.py  easy.py  hard.py  medium.py
server/: app.py
tests/: test_env.py  test_models.py  test_reward.py  test_tasks.py  test_train_grpo.py
