[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-review-env"
version = "1.0.0"
description = "Deterministic pull request code review triage environment for OpenEnv"
authors = [
    { name = "Meta Infra Tooling" }
]
dependencies = [
    "fastapi>=0.115.2",
    "uvicorn>=0.44.0",
    "pydantic>=2.12.5",
    "openai>=2.7.2",
    "openenv-core>=0.2.3",
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["openenv", "code-review", "triage", "benchmarking"]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = ["pr_review_env", "pr_review_env.tasks", "server"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
